--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- Шапка -->
     <header>
       <nav>
-        <a href="./index.html" class="headlogo">WebStudio</a>
+        <a href="./index.html" class="head logo"><span class="logo-accent">Web</span>Studio</a>
         <ul class="site-nav list">
           <li><a href="./index.html" class="link current">Студия</a></li>
           <li><a href="./portfolio.html" class="link">Портфолио</a></li>
@@ -33,40 +33,44 @@
     <!--Главная секция-->
     <main>
       <!--Герой-->
-      <section>
-        <h1>Эффективные решения для вашего бизнеса</h1>
-        <button type="button" class="button primary">Заказать услугу</button>
+      <section class="hero">
+        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+        <button type="button" class="button primary hero">Заказать услугу</button>
       </section>
       <!--Особенности-->
       <section class="section">
-        <h2 class="section-title">Особенности</h2>
-        <ul>
+        <h2 class="section-title hide">Особенности</h2>
+        <ul class="features list">
           <li>
-            <h3>Внимание к деталям</h3>
-            <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+            <h3 class="features-list title">Внимание к деталям</h3>
+            <p class="text">
+              Идейные соображения, а также начало повседневной работы по формированию позиции.
+            </p>
           </li>
           <li>
-            <h3>Пунктуальность</h3>
-            <p>
+            <h3 class="features-list title">Пунктуальность</h3>
+            <p class="text">
               Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
             </p>
           </li>
           <li>
-            <h3>Планирование</h3>
-            <p>
+            <h3 class="features-list title">Планирование</h3>
+            <p class="text">
               Равным образом консультация с широким активом в значительной степени обуславливает.
             </p>
           </li>
           <li>
-            <h3>Современные технологии</h3>
-            <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+            <h3 class="features-list title">Современные технологии</h3>
+            <p class="text">
+              Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+            </p>
           </li>
         </ul>
       </section>
       <!--Чем мы занимаемся-->
       <section class="section">
         <h2 class="section-title">Чем мы занимаемся</h2>
-        <ul>
+        <ul class="section list">
           <li>
             <img src="./images/box1.jpg" alt="набор программного кода на клавиатуре" width="370" />
           </li>
@@ -87,40 +91,42 @@
         </ul>
       </section>
       <!--Наша команда-->
-      <section class="section">
+      <section class="team">
         <h2 class="section-title">Наша команда</h2>
-        <ul>
-          <li>
+        <ul class="list">
+          <li class="card">
             <img src="./images/team1.jpg" alt="Игорь Демьяненко" width="270" />
-            <h3>Игорь Демьяненко</h3>
-            <p>Product Designer</p>
+            <h3 class="team-title">Игорь Демьяненко</h3>
+            <p class="text">Product Designer</p>
           </li>
-          <li>
+          <li class="card">
             <img src="./images/team2.jpg" alt="Ольга Репина" width="270" />
-            <h3>Ольга Репина</h3>
-            <p>Frontend Developer</p>
+            <h3 class="team-title">Ольга Репина</h3>
+            <p class="text">Frontend Developer</p>
           </li>
-          <li>
+          <li class="card">
             <img src="./images/team3.jpg" alt="Николай Тарасов" width="270" />
-            <h3>Николай Тарасов</h3>
-            <p>Marketing</p>
+            <h3 class="team-title">Николай Тарасов</h3>
+            <p class="text">Marketing</p>
           </li>
-          <li>
+          <li class="card">
             <img src="./images/team4.jpg" alt="Михаил Ермаков" width="270" />
-            <h3>Михаил Ермаков</h3>
-            <p>UI Designer</p>
+            <h3 class="team-title">Михаил Ермаков</h3>
+            <p class="text">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
     <!--Футер-->
     <footer>
-      <a href="./index.html">WebStudio</a>
-      <address>
-        <ul>
-          <li><a href="">г. Киев, пр-т Леси Украинки, 26</a></li>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      <a href="./index.html" class="footer logo"><span class="logo-accent">Web</span>Studio</a>
+      <address class="adress">
+        <ul class="adress list">
+          <li><a href="" class="adress steet">г. Киев, пр-т Леси Украинки, 26</a></li>
+          <li>
+            <a href="mailto:info@devstudio.com" class="adress contacts">info@devstudio.com</a>
+          </li>
+          <li><a href="tel:+380961111111" class="adress contacts">+38 096 111 11 11</a></li>
         </ul>
       </address>
     </footer>
