--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- Шапка -->
     <header>
       <nav>
-        <a href="./index.html" class="head logo"><span class="logo-accent">Web</span>Studio</a>
+        <a href="./index.html" class="head logo link"><span class="logo-accent">Web</span>Studio</a>
         <ul class="site-nav list">
           <li><a href="./index.html" class="link current">Студия</a></li>
           <li><a href="./portfolio.html" class="link">Портфолио</a></li>
@@ -34,43 +34,43 @@
     <main>
       <!--Герой-->
       <section class="hero">
-        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+        <h1 class="title">Эффективные решения для вашего бизнеса</h1>
         <button type="button" class="button primary hero">Заказать услугу</button>
       </section>
       <!--Особенности-->
-      <section class="section">
-        <h2 class="section-title hide">Особенности</h2>
+      <section class="features">
+        <h2 class="title hide">Особенности</h2>
         <ul class="features list">
           <li>
-            <h3 class="features-list title">Внимание к деталям</h3>
-            <p class="text">
+            <h3 class="features-title">Внимание к деталям</h3>
+            <p class="features-description">
               Идейные соображения, а также начало повседневной работы по формированию позиции.
             </p>
           </li>
           <li>
-            <h3 class="features-list title">Пунктуальность</h3>
-            <p class="text">
+            <h3 class="features-title">Пунктуальность</h3>
+            <p class="features-description">
               Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
             </p>
           </li>
           <li>
-            <h3 class="features-list title">Планирование</h3>
-            <p class="text">
+            <h3 class="features-title">Планирование</h3>
+            <p class="features-description">
               Равным образом консультация с широким активом в значительной степени обуславливает.
             </p>
           </li>
           <li>
-            <h3 class="features-list title">Современные технологии</h3>
-            <p class="text">
+            <h3 class="features-title">Современные технологии</h3>
+            <p class="features-description">
               Значимость этих проблем настолько очевидна, что реализация плановых заданий.
             </p>
           </li>
         </ul>
       </section>
       <!--Чем мы занимаемся-->
-      <section class="section">
-        <h2 class="section-title">Чем мы занимаемся</h2>
-        <ul class="section list">
+      <section class="whatwedo">
+        <h2 class="whatwedo-title">Чем мы занимаемся</h2>
+        <ul class="whatwedo list">
           <li>
             <img src="./images/box1.jpg" alt="набор программного кода на клавиатуре" width="370" />
           </li>
@@ -92,41 +92,41 @@
       </section>
       <!--Наша команда-->
       <section class="team">
-        <h2 class="section-title">Наша команда</h2>
+        <h2 class="team-title">Наша команда</h2>
         <ul class="list">
           <li class="card">
             <img src="./images/team1.jpg" alt="Игорь Демьяненко" width="270" />
-            <h3 class="team-title">Игорь Демьяненко</h3>
-            <p class="text">Product Designer</p>
+            <h3 class="member-title">Игорь Демьяненко</h3>
+            <p class="member-description">Product Designer</p>
           </li>
           <li class="card">
             <img src="./images/team2.jpg" alt="Ольга Репина" width="270" />
-            <h3 class="team-title">Ольга Репина</h3>
-            <p class="text">Frontend Developer</p>
+            <h3 class="member-title">Ольга Репина</h3>
+            <p class="member-description">Frontend Developer</p>
           </li>
           <li class="card">
             <img src="./images/team3.jpg" alt="Николай Тарасов" width="270" />
-            <h3 class="team-title">Николай Тарасов</h3>
-            <p class="text">Marketing</p>
+            <h3 class="member-title">Николай Тарасов</h3>
+            <p class="member-description">Marketing</p>
           </li>
           <li class="card">
             <img src="./images/team4.jpg" alt="Михаил Ермаков" width="270" />
-            <h3 class="team-title">Михаил Ермаков</h3>
-            <p class="text">UI Designer</p>
+            <h3 class="member-title">Михаил Ермаков</h3>
+            <p class="member-description">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
     <!--Футер-->
     <footer>
-      <a href="./index.html" class="footer logo"><span class="logo-accent">Web</span>Studio</a>
+      <a href="./index.html" class="footer logo link"><span class="logo-accent">Web</span>Studio</a>
       <address class="adress">
         <ul class="adress list">
-          <li><a href="" class="adress steet">г. Киев, пр-т Леси Украинки, 26</a></li>
+          <li><a href="" class="streat link">г. Киев, пр-т Леси Украинки, 26</a></li>
           <li>
-            <a href="mailto:info@devstudio.com" class="adress contacts">info@devstudio.com</a>
+            <a href="mailto:info@devstudio.com" class="contacts link">info@devstudio.com</a>
           </li>
-          <li><a href="tel:+380961111111" class="adress contacts">+38 096 111 11 11</a></li>
+          <li><a href="tel:+380961111111" class="contacts link">+38 096 111 11 11</a></li>
         </ul>
       </address>
     </footer>
