--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
     <!-- Шапка -->
     <header>
       <nav>
-        <a href="./index.html" class="head logo"><span class="logo-accent">Web</span>Studio</a>
+        <a href="./index.html" class="head logo link"><span class="logo-accent">Web</span>Studio</a>
         <ul class="site-nav list">
           <li><a href="./index.html" class="link">Студия</a></li>
           <li><a href="./portfolio.html" class="link current">Портфолио</a></li>
@@ -35,7 +35,7 @@
       <section>
         <h1 class="hide">Портфолио</h1>
         <ul class="button list">
-          <li><button type="button" class="button secondary">Все</button></li>
+          <li><button type="button" class="button secondary activ">Все</button></li>
           <li><button type="button" class="button secondary">Веб-сайты</button></li>
           <li><button type="button" class="button secondary">Приложения</button></li>
           <li><button type="button" class="button secondary">Дизайн</button></li>
@@ -45,64 +45,64 @@
           <li class="card">
             <a href="" class="work link">
               <img src="./images/project1.jpg" alt="" width="370" />
-              <h2 class="work-tittle">Технокряк</h2>
-              <p class="text">Веб-сайт</p>
+              <h2 class="work-title">Технокряк</h2>
+              <p class="work-description">Веб-сайт</p>
             </a>
           </li>
           <li class="card">
             <a href="" class="work link">
               <img src="./images/project2.jpg" alt="" width="370" />
-              <h2>Постер New Orlean vs Golden Star</h2>
-              <p class="text">Дизайн</p>
+              <h2 class="work-title">Постер New Orlean vs Golden Star</h2>
+              <p class="work-description">Дизайн</p>
             </a>
           </li>
           <li class="card">
             <a href="" class="work link">
               <img src="./images/project3.jpg" alt="" width="370" />
-              <h2 class="work-tittle">Ресторан Seafood</h2>
-              <p class="text">Приложение</p>
+              <h2 class="work-title">Ресторан Seafood</h2>
+              <p class="work-description">Приложение</p>
             </a>
           </li>
           <li class="card">
             <a href="" class="work link">
               <img src="./images/project4.jpg" alt="" width="370" />
               <h2 class="work-title">Проект Prime</h2>
-              <p class="text">Маркетинг</p>
+              <p class="work-description">Маркетинг</p>
             </a>
           </li>
           <li class="card">
             <a href="" class="work link">
               <img src="./images/project5.jpg" alt="" width="370" />
-              <h2 class="work-tittle">Проект Boxes</h2>
-              <p class="text">Приложение</p>
+              <h2 class="work-title">Проект Boxes</h2>
+              <p class="work-description">Приложение</p>
             </a>
           </li>
           <li class="card">
             <a href="" class="work link">
               <img src="./images/project6.jpg" alt="" width="370" />
-              <h2 class="work-tittle">Inspiration has no Borders</h2>
-              <p class="text">Веб-сайт</p>
+              <h2 class="work-title">Inspiration has no Borders</h2>
+              <p class="work-description">Веб-сайт</p>
             </a>
           </li>
           <li class="card">
             <a href="" class="work link">
               <img src="./images/project7.jpg" alt="" width="370" />
-              <h2 class="work-tittle">Издание Limited Edition</h2>
-              <p class="text">Дизайн</p>
+              <h2 class="work-title">Издание Limited Edition</h2>
+              <p class="work-description">Дизайн</p>
             </a>
           </li>
           <li class="card">
             <a href="" class="work link">
               <img src="./images/project8.jpg" alt="" width="370" />
-              <h2 class="work-tittle">Проект LAB</h2>
-              <p class="text">Маркетинг</p>
+              <h2 class="work-title">Проект LAB</h2>
+              <p class="work-description">Маркетинг</p>
             </a>
           </li>
           <li class="card">
             <a href="" class="work link">
               <img src="./images/project9.jpg" alt="" width="370" />
-              <h2 class="work-tittle">Growing Business</h2>
-              <p class="text">Приложение</p>
+              <h2 class="work-title">Growing Business</h2>
+              <p class="work-description">Приложение</p>
             </a>
           </li>
         </ul>
@@ -110,14 +110,14 @@
     </main>
     <!--Футер-->
     <footer>
-      <a href="./index.html" class="footer logo"><span class="logo-accent">Web</span>Studio</a>
+      <a href="./index.html" class="footer logo link"><span class="logo-accent">Web</span>Studio</a>
       <address class="adress">
         <ul class="adress list">
-          <li><a href="" class="adress steet">г. Киев, пр-т Леси Украинки, 26</a></li>
+          <li><a href="" class="streat link">г. Киев, пр-т Леси Украинки, 26</a></li>
           <li>
-            <a href="mailto:info@devstudio.com" class="adress contacts">info@devstudio.com</a>
+            <a href="mailto:info@devstudio.com" class="contacts link">info@devstudio.com</a>
           </li>
-          <li><a href="tel:+380961111111" class="adress contacts">+38 096 111 11 11</a></li>
+          <li><a href="tel:+380961111111" class="contacts link">+38 096 111 11 11</a></li>
         </ul>
       </address>
     </footer>
