--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       </section>
       <!--Особенности-->
       <section class="features">
-        <h2 class="title hide">Особенности</h2>
+        <h2 class="section-title hide">Особенности</h2>
         <ul class="features list">
           <li>
             <h3 class="features-title">Внимание к деталям</h3>
@@ -69,7 +69,7 @@
       </section>
       <!--Чем мы занимаемся-->
       <section class="whatwedo">
-        <h2 class="whatwedo-title">Чем мы занимаемся</h2>
+        <h2 class="section-title">Чем мы занимаемся</h2>
         <ul class="whatwedo list">
           <li>
             <img src="./images/box1.jpg" alt="набор программного кода на клавиатуре" width="370" />
@@ -92,7 +92,7 @@
       </section>
       <!--Наша команда-->
       <section class="team">
-        <h2 class="team-title">Наша команда</h2>
+        <h2 class="section-title">Наша команда</h2>
         <ul class="list">
           <li class="card">
             <img src="./images/team1.jpg" alt="Игорь Демьяненко" width="270" />
